  - BTS#0000819: Fix inconsistent calculations in Sale Registry (alec)
  - Security fix: Add module name validation (alec)
  - fixed 'disabled' filter on customers list so customers without nodes
    are skipped (alec)
  - BTS#0000821: fixed sorting of printed invoices (alec)
  - Added peak memory usage info in page footer (alec)
  - Added EtherWerX STM channels management (alec)

version 1.11.9 Moloc (2009-10-28):
 
  - BTS#0000794: fixed postfix configuration for MySQL (alec)
  - improved performance of bank account fetching (alec)
  - added contrib/bin cash-import scripts for BPH, BZ WBK and PEKAO
    banks (webvisor)
  - fixed 'nas' view definition (alec)
  - added Configuration -> Import Sources (alec)
  - added import source filter for balance sheet report (alec)
  - added Cash Import History report (alec)
  - BTS#0000796: fixed nbtscan use (alec)
  - POSIX Regex functions (deprecated in PHP-5.3) replaced with PCRE/String (alec)
  - LMS::GetCache(): fixed serious bug connected with bad assumption that
    isset() returns false when key is not set (chilan)
  - BTS#0000797: fixed excluded_networks in lms-traffic-logiptables (alec)
  - lmsd: added --pidfile option (Jerzy Kolosowski)
  - lmsd: fixed sigfault in dns module (Jerzy Kolosowski)
  - lmsd: fixed bug in str_replace function (Jerzy Kolosowski)
  - contrib/daemon: added Gentoo init scripts (Jerzy Kolosowski)
  - Debit Notes (alec)
  - added separate access rights for Userpanel and voip accounts (alec)
  - lmsd/payments: added 'check_invoices' option (alec)
  - BTS#0000802: fixed date filter for transfer forms printing of invoices
    created at 00:00 hour (alec)
  - BTS#0000801: don't forget original/copy setting when printing new
    invoice (alec)
  - lms_parse_ini_file() replaced by PHP's parse_ini_file() (alec)
  - optimized GetCustomerList() by moving more operations to DB server (alec)
  - BTS#0000799: optimized GetCustomerNames() and some other SQL queries
    with customer name sorting (alec)