@@ -52,7 +52,8 @@ version ? (????-??-??)
   - BTS#0000821: fixed sorting of printed invoices (alec)
   - Added peak memory usage info in page footer (alec)
   - Added EtherWerX STM channels management (alec)
-
+  - we can omit stats data in database backup (chilan)
+  
 version 1.11.9 Moloc (2009-10-28):
  
   - BTS#0000794: fixed postfix configuration for MySQL (alec)
